--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+title: HDF5 and Mixed Media
+description: Tests on chunk selection for video and its effect on access time and compression
